Implement /tickets/{prepId}
Allow only a single ticket to be retrieved at a time. Will add a bulk API later
if needed.
